[tool.poetry]
name = "ml4gw"
version = "0.6.3"
description = "Tools for training torch models on gravitational wave data"
readme = "README.md"
authors = [
    "Alec Gunny <alec.gunny@ligo.org>", "Ethan Marx <emarx@mit.edu>", "Will Benoit <benoi090@umn.edu>", "Deep Chatterjee <deep1018@mit.edu"
]

[tool.poetry.dependencies]
python = "^3.9,<3.13"

jaxtyping = "^0.2"

# torch deps
torch = "^2.0"
torchaudio = "^2.0"
numpy = "<2.0.0"

[tool.poetry.group.dev.dependencies]
coverage = {version = "^7.6.10", extras = ["toml"]}
pre-commit = "^2.16"
pytest = "^7.0"

# need lalsuite to compute gmst in injection testing
lalsuite = "^7.0"
bilby = "^2.1"
jupyter = "^1.0.0"
gwpy = "^3.0"

# versions >= 1.9. fix issue with median calculation 
# https://github.com/scipy/scipy/issues/15601
scipy = ">=1.9.0,<1.15"

Sphinx = ">5.0"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^2.0.0"
sphinx-autodoc-typehints = "^2.0.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''


[tool.isort]
known_first_party = ["ml4gw"]
multi_line_output = 3
include_trailing_comma = true


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311,312}
isolated_build = true

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv:py{39,310,311,312}]
deps = 
    coverage[toml]>=7.6,<8
    pytest>=7,<8
    lalsuite>=7,<8
    bilby>=1.1,<2
    gwpy>=3.0
    numpy>=1,<2
    scipy>=1.9,<1.15
pass_env = COVERAGE_FILE
commands = coverage run -m pytest tests
"""

[tool.coverage.run]
source = ["ml4gw"]
relative_files = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
