[project]
name = "ml4gw"
dynamic = ["version"]
description = "Tools for training torch models on gravitational wave data"
authors = [
    { name = "Ethan Marx", email = "emarx@mit.edu" },
    { name = "Will Benoit", email = "benoi090@umn.edu" },
    { name = "Deep Chatterjee", email = "deep1018@mit.edu" },
    { name = "Alec Gunny", email = "alec.gunny@ligo.org" },
    { name = "Ravi Kumar", email = "ravi.kumar@ligo.org" },
]
maintainers = [
    { name = "Ethan Marx", email = "emarx@mit.edu" },
    { name = "Will Benoit", email = "benoi090@umn.edu" },
    { name = "Deep Chatterjee", email = "deep1018@mit.edu" },
]
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "jaxtyping>=0.2,<0.3",
    "torch~=2.0",
    "torchaudio~=2.0",
    "numpy<2.0.0",
    "scipy>=1.9.0,<1.15",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.10,<8",
    "pre-commit~=2.16",
    "pytest~=7.0",
    "lalsuite~=7.0",
    "bilby~=2.1",
    "jupyter>=1.0.0,<2",
    "gwpy~=3.0",
    "pytest-repeat>=0.9.3,<0.10",
    "h5py~=3.12",
    "torchmetrics~=1.6.0",
    "lightning~=2.4.0",
    "rich>=10.2.2,<14.0",
]
docs = [
    "Sphinx>5.0",
    "sphinx-rtd-theme>=2.0.0,<3",
    "myst-parser>=2.0.0,<3",
    "myst-nb>=1.3.0",
    "sphinx-autodoc-typehints>=2.0.0,<3",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.post{ccount}+git.{sha}"

[build-system]
requires = [ "setuptools>=77.0.3", "wheel", "setuptools-git-versioning>=2.0,<3",]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79
extend-exclude = ["docs", "examples"]
target-version = "py312"

[tool.ruff.lint]
extend-safe-fixes = ["C408"]
mccabe = {"max-complexity" = 18}
select = ["B", "C", "E", "F", "UP", "W"]
# ignore W605 and E203 for consistency with black
# ignore F722 for compatibility with jaxtyping
ignore = ["W605", "E203", "F722"]  

# ignore asterisk imports and unused
# import errors in __init__ files
per-file-ignores =  {"**/__init__.py" = ["F401", "F403"]}

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{310,311,312}
isolated_build = true

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312

[testenv:py{310,311,312}]
deps = 
    coverage[toml]>=7.6,<8
    pytest>=7,<8
    lalsuite>=7,<8
    bilby>=2.1
    gwpy>=3.0
    numpy>=1,<2
    scipy>=1.9,<1.14
pass_env = COVERAGE_FILE
commands = coverage run -m pytest tests
"""

[tool.coverage.run]
source = ["ml4gw"]
relative_files = true
