[project]
name = "ml4gw"
dynamic = ["version"]
description = "Tools for training torch models on gravitational wave data"
authors = [
    { name = "Ethan Marx", email = "emarx@mit.edu" },
    { name = "Will Benoit", email = "benoi090@umn.edu" },
    { name = "Deep Chatterjee", email = "deep1018@mit.edu" },
    { name = "Alec Gunny", email = "alec.gunny@ligo.org" },
    { name = "Ravi Kumar", email = "ravi.kumar@ligo.org" },
    { name = "Bhavya Gupta", email = "bhavya.gupta@ligo.org" },
]
maintainers = [
    { name = "Ethan Marx", email = "emarx@mit.edu" },
    { name = "Will Benoit", email = "benoi090@umn.edu" },
    { name = "Deep Chatterjee", email = "deep1018@mit.edu" },
]
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "jaxtyping>=0.2,<0.3",
    "torch~=2.0",
    "torchaudio~=2.0",
    "numpy>=1.0.0",
    "scipy>=1.9.0,<1.15",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.10,<8",
    "prek>=0.1",
    "pytest>=7,<10",
    "lalsuite~=7.0",
    "bilby~=2.1",
    "pytest-repeat>=0.9.3,<0.10",
    "h5py~=3.12",
]
docs = [
    "Sphinx>5.0",
    "sphinx-rtd-theme>=2.0.0,<3",
    "myst-parser>=2.0.0,<3",
    "myst-nb>=1.3.0",
    "sphinx-autodoc-typehints>=2.0.0,<3",
    "torchmetrics~=1.6.0",
    "lightning~=2.4.0",
    "rich>=10.2.2,<16.0",
    "gwpy~=3.0",
    "jupyter>=1.0.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.post{ccount}+git.{sha}"

[build-system]
requires = [ "setuptools>=77.0.3", "wheel", "setuptools-git-versioning>=2.0,<3",]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79
extend-select = ["T201"]
extend-exclude = ["docs", "examples"]
target-version = "py312"

[tool.ruff.lint]
extend-safe-fixes = ["C408"]
mccabe = {"max-complexity" = 18}
select = ["B", "C", "E", "F", "I", "UP", "W"]
# ignore W605 and E203 for consistency with black
# ignore F722 for compatibility with jaxtyping
ignore = ["W605", "E203", "F722"]  

# ignore asterisk imports and unused
# import errors in __init__ files
per-file-ignores =  {"**/__init__.py" = ["F401", "F403"]}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ml4gw"]
relative_files = true
