[project]
name = "ml4gw-tutorial"
version = "0.1.0"
description = "Notebook introducing aspects of the ml4gw library"
authors = [{ name = "William Benoit" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "ml4gw==0.6.1",
    "matplotlib==3.10.0",
    "h5py~=3.12",
    "torchmetrics==1.6.0",
    "lightning==2.4.0",
    "rich>=10.2.2",
    "jupyter>=1.1.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
